# Text.StreamSummarization.Python

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml  report_types.json
src/auto_summarization/: __init__.py
src/auto_summarization/adapters/: base.py  orm.py  repository.py
src/auto_summarization/domain/: analysis.py  enums.py  session.py  user.py
src/auto_summarization/entrypoints/: api.py
src/auto_summarization/entrypoints/routers/: analysis.py  session.py  user.py
src/auto_summarization/entrypoints/schemas/: __init__.py  analysis.py  session.py  user.py
src/auto_summarization/services/: config.py
src/auto_summarization/services/data/: unit_of_work.py
src/auto_summarization/services/handlers/: analysis.py  session.py  user.py
src/stream_summarization/adapters/: base.py  orm.py  repository.py
src/stream_summarization/domain/: analysis.py  documents.py  enums.py  report.py  session.py
src/stream_summarization/entrypoints/: api.py
src/stream_summarization/entrypoints/routers/: __init__.py  analysis.py  chat_session.py  documents.py  report.py  session.py  user.py
src/stream_summarization/entrypoints/schemas/: documents.py  report.py  session.py
src/stream_summarization/services/: config.py
src/stream_summarization/services/data/: unit_of_work.py
src/stream_summarization/services/handlers/: analysis.py  documents.py  report.py  session.py  user.py
tests/: conftest.py  test_api.py
